--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
 	<!-- YOUTUBE LINK --> 
 	
 	<!-- Video Carousel Container -->
-<div class="video-carousel" style="position: absolute; top: 875px; left: 15px;">
-    <button id="prevBtn" style="position: absolute; left: -50px; top: 50%; transform: translateY(-50%);">&#10094;</button> <!-- Left arrow -->
-    
-    <div class="video-wrapper">
-        <iframe id="ytplayer" width="395" height="222.1875" src="https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+<div class="video-carousel" style="position: absolute; top: 895px; left: 15px;">
+    <div class="controls" style="position: relative; width: 395px; height: 30px; text-align: center; top: -20px;">
+        <button id="prevBtn" style="background: none; border: none; font-size: 18px; cursor: pointer; padding: 0 10px;">&#10094;</button>
+        <span style="font-size: 14px; color: #333;">Rotate to see other videos</span>
+        <button id="nextBtn" style="background: none; border: none; font-size: 18px; cursor: pointer; padding: 0 10px;">&#10095;</button>
     </div>
     
-    <button id="nextBtn" style="position: absolute; right: -50px; top: 50%; transform: translateY(-50%);">&#10095;</button> <!-- Right arrow -->
+    <div class="video-wrapper" style="position: relative;">
+        <iframe id="ytplayer" width="395" height="222.1875" src="https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+    </div>
 </div>
 
 <!-- Add styling for carousel -->
@@ -97,18 +99,21 @@
     }
 
     #prevBtn, #nextBtn {
-        background-color: #333;
-        color: white;
+        color: #333;
         border: none;
-        padding: 10px;
         cursor: pointer;
-        font-size: 24px;
-        transition: background-color 0.3s ease;
+        font-size: 18px;
+        transition: color 0.3s ease;
         z-index: 2;
     }
 
     #prevBtn:hover, #nextBtn:hover {
-        background-color: #555;
+        color: #555;
+    }
+
+    /* Add margin to move video down by 20px */
+    iframe {
+        margin-top: 20px;
     }
 </style>
 
@@ -145,6 +150,7 @@
         updateVideo();
     });
 </script>
+
 
 	
 	<!-- PEER SUPPORT --> <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener"> <img style="position: absolute; top: 1170px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support" /> </a>
