--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 	<!-- YOUTUBE LINK --> 
 	
 	<!-- Video Carousel Container -->
-<div class="video-carousel" style="position: absolute; top: 895px; left: 15px;">
-    <div class="controls" style="position: relative; width: 395px; height: 30px; text-align: center; top: -20px;">
-        <button id="prevBtn" style="background: none; border: none; font-size: 18px; cursor: pointer; padding: 0 10px;">&#10094;</button>
-        <span style="font-size: 14px; color: #333;">Rotate to see other videos</span>
-        <button id="nextBtn" style="background: none; border: none; font-size: 18px; cursor: pointer; padding: 0 10px;">&#10095;</button>
+<div class="video-carousel" style="position: absolute; top: 880px; left: 15px;">
+    <div class="controls" style="position: relative; width: 395px; height: 30px; text-align: center; top: -35px;">
+        <button id="prevBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10094;</button>
+        <span style="font-size: 16px; color: #333;">Rotate to see other videos</span>
+        <button id="nextBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10095;</button>
     </div>
     
     <div class="video-wrapper" style="position: relative;">
@@ -102,7 +102,7 @@
         color: #333;
         border: none;
         cursor: pointer;
-        font-size: 18px;
+        font-size: 30px; /* Larger arrows */
         transition: color 0.3s ease;
         z-index: 2;
     }
@@ -111,9 +111,9 @@
         color: #555;
     }
 
-    /* Add margin to move video down by 20px */
+    /* Adjust margin to move video up by 15px */
     iframe {
-        margin-top: 20px;
+        margin-top: 5px; /* Previously 20px, reduced by 15px */
     }
 </style>
 
