--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 	<!-- YOUTUBE LINK --> 
 	
 	<!-- Video Carousel Container -->
-<div class="video-carousel" style="position: absolute; top: 880px; left: 15px;">
-    <div class="controls" style="position: relative; width: 395px; height: 30px; text-align: center; top: -35px;">
+<div class="video-carousel" style="position: absolute; top: 885px; left: 15px;">
+    <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
         <button id="prevBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10094;</button>
-        <span style="font-size: 16px; color: #333;">Rotate to see other videos</span>
+        <span style="font-size: 16px; color: #333; flex-grow: 1; text-align: center;">Rotate to see other videos</span>
         <button id="nextBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10095;</button>
     </div>
     
@@ -111,9 +111,9 @@
         color: #555;
     }
 
-    /* Adjust margin to move video up by 15px */
+    /* Adjust margin to move video up by 5px more */
     iframe {
-        margin-top: 5px; /* Previously 20px, reduced by 15px */
+        margin-top: 0px; /* Previously 5px, now 0px */
     }
 </style>
 
@@ -150,7 +150,6 @@
         updateVideo();
     });
 </script>
-
 
 	
 	<!-- PEER SUPPORT --> <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener"> <img style="position: absolute; top: 1170px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support" /> </a>
