--- a/index.html
+++ b/index.html
@@ -77,79 +77,41 @@
 	<!-- YOUTUBE LINK --> 
 	
 	<!-- Video Carousel Container -->
-<div class="video-carousel" style="position: absolute; top: 880px; left: 15px;">
+<div class="video-carousel" style="position: absolute; top: 875px; left: 15px;">
+    <!-- Controls with arrows and centered text -->
     <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
         <button id="prevBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10094;</button>
         <span style="font-size: 16px; color: #333; flex-grow: 1; text-align: center;">Rotate to see other videos</span>
         <button id="nextBtn" style="background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px;">&#10095;</button>
     </div>
     
+    <!-- Video iframe moved up by 15px -->
     <div class="video-wrapper" style="position: relative;">
-        <iframe id="ytplayer" width="395" height="222.1875" src="https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+        <iframe id="ytplayer" width="395" height="222.1875" src="https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1" frameborder="0" allowfullscreen="allowfullscreen" style="transform: translateY(-15px);"></iframe>
     </div>
 </div>
 
-<!-- Add styling for carousel -->
-<style>
-    .video-wrapper {
-        width: 395px;
-        height: 222.1875px;
-        overflow: hidden;
-        position: relative;
-    }
-
-    #prevBtn, #nextBtn {
-        color: #333;
-        border: none;
-        cursor: pointer;
-        font-size: 30px; /* Larger arrows */
-        transition: color 0.3s ease;
-        z-index: 2;
-    }
-
-    #prevBtn:hover, #nextBtn:hover {
-        color: #555;
-    }
-
-    /* Adjust margin to move video up by 5px more */
-    iframe {
-        margin-top: -10px; /* Previously 5px, now 0px */
-    }
-</style>
-
-<!-- Add JavaScript to handle video switching -->
+<!-- Add JavaScript to handle the video carousel functionality -->
 <script>
-    // Array of YouTube video URLs (embed links)
-    const videoUrls = [
-        "https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1",
-        "https://www.youtube.com/embed/tgbNymZ7vqY",
-        "https://www.youtube.com/embed/dQw4w9WgXcQ"
+    const videos = [
+        'https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1',
+        'https://www.youtube.com/embed/video2',
+        'https://www.youtube.com/embed/video3'
     ];
 
-    let currentVideoIndex = 0;
+    let currentIndex = 0;
 
-    // Select the iframe and buttons
-    const youtubeFrame = document.getElementById("ytplayer");
-    const prevBtn = document.getElementById("prevBtn");
-    const nextBtn = document.getElementById("nextBtn");
-
-    // Function to update the iframe src
-    function updateVideo() {
-        youtubeFrame.src = videoUrls[currentVideoIndex];
-    }
-
-    // Click event for next button
-    nextBtn.addEventListener("click", function () {
-        currentVideoIndex = (currentVideoIndex + 1) % videoUrls.length;
-        updateVideo();
+    document.getElementById('nextBtn').addEventListener('click', () => {
+        currentIndex = (currentIndex + 1) % videos.length;
+        document.getElementById('ytplayer').src = videos[currentIndex];
     });
 
-    // Click event for prev button
-    prevBtn.addEventListener("click", function () {
-        currentVideoIndex = (currentVideoIndex - 1 + videoUrls.length) % videoUrls.length;
-        updateVideo();
+    document.getElementById('prevBtn').addEventListener('click', () => {
+        currentIndex = (currentIndex - 1 + videos.length) % videos.length;
+        document.getElementById('ytplayer').src = videos[currentIndex];
     });
 </script>
+
 
 	
 	<!-- PEER SUPPORT --> <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener"> <img style="position: absolute; top: 1170px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support" /> </a>
