--- a/chief.html
+++ b/chief.html
@@ -1,5 +1,18 @@
 <!-- Background Image Container -->
-<div style="position: relative; width: 449px; height: 1690px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/898120FE-18DE-8B21-BF0B-B05CA888CC05.png') no-repeat center center; background-size: cover;">
+<div style="position: relative; width: 449px; height: 1690px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/3C0E7E47-2D78-8C84-12CA-2135D84C2922.png') no-repeat center center; background-size: cover;">
 	
 
-	
+<!-- Main Tab positioned individually -->
+<div style="position: absolute; top: 10px; left: 13px;">
+    <a href="index.html">
+        <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8BCF333D-E710-8CA5-A508-52605AC27F2E.png" alt="Main Page" width="90" height="30" style="width: 100px; height: 35px;">
+    </a>
+</div>
+
+<!-- Chief Tab positioned individually -->
+<div style="position: absolute; top: 10px; left: 120px;">
+    <a href="chief.html">
+        <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A5190065-A4CF-B7E9-CCF5-0C1889A465C6.png" alt="Chief Page" style="width: 200px; height: 35px;">
+    </a>
+</div>
+
