--- a/chief.html
+++ b/chief.html
@@ -1,6 +1,6 @@
+
 <!-- Background Image Container -->
-<div style="position: relative; width: 449px; height: 1690px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/3C0E7E47-2D78-8C84-12CA-2135D84C2922.png') no-repeat center center; background-size: cover;">
-	
+<div style="position: relative; width: 425px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/3C0E7E47-2D78-8C84-12CA-2135D84C2922.png') no-repeat center top; background-size: cover;">
 
 <!-- Main Tab positioned individually -->
 <div style="position: absolute; top: 10px; left: 13px;">
