--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!-- Background Image Container -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Background Image Container -->
 <div style="position: relative; width: 420px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/DDCE08C6-3701-F52A-9474-3D4B45AA5B55.gif') no-repeat center center; background-size: cover;">
 <!-- Main Tab positioned individually -->
 <div style="position: absolute; top: 10px; left: 13px;">
