--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <!-- Main Tab positioned individually -->
         <div style="position: absolute; top: 10px; left: 13px;">
             <a href="index.html">
-                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8BCF333D-E710-8CA5-A508-52605AC27F2E.png" alt="Main Page" style="width: 105px; height: 35px;">
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/D27FABC9-BD9A-746C-90C8-BD549CC0F70C.png alt="Main Page" style="width: 105px; height: 35px;">
             </a>
         </div>
 
         <!-- Chief Tab positioned individually -->
         <div style="position: absolute; top: 10px; left: 120px;">
             <a href="chief.html">
-                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AF2D9D75-5C82-250E-9C61-8D697E60C4FE.png" alt="Chief Page" style="width: 190px; height: 35px;">
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/6A2B4C3F-459B-0053-2DB8-8601E659F1F8.png" alt="Chief Page" style="width: 190px; height: 35px;">
             </a>
         </div>
 
