--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Main Tab positioned individually -->
         <div style="position: absolute; top: 10px; left: 13px;">
             <a href="index.html">
-                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/D27FABC9-BD9A-746C-90C8-BD549CC0F70C.png alt="Main Page" style="width: 105px; height: 35px;">
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/D27FABC9-BD9A-746C-90C8-BD549CC0F70C.png" alt="Main Page" style="width: 105px; height: 35px;">
             </a>
         </div>
 
