--- a/Weather.html
+++ b/Weather.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zoomed Iframe</title>
+    <style>
+        .iframe-container {
+            position: relative;
+            overflow: hidden;
+            width: 100%; /* Set the desired width */
+            height: 500px; /* Set the desired height */
+        }
 
+        .iframe-container iframe {
+            position: absolute;
+            width: 200%; /* Increase the width for zooming */
+            height: 200%; /* Increase the height for zooming */
+            top: -50%; /* Adjust top value to position the iframe */
+            left: -50%; /* Adjust left value to position the iframe */
+            transform: scale(1.5); /* Zoom in using scale */
+        }
+    </style>
+</head>
+<body>
+    <div class="iframe-container">
+        <iframe src="https://s.w-x.co/staticmaps/wu/wu/wxtype1200_cur/uspie/animate.png" frameborder="0"></iframe>
+    </div>
+</body>
+</html>
