--- a/Weather.html
+++ b/Weather.html
@@ -9,15 +9,15 @@
             position: relative;
             overflow: hidden;
             width: 100%; /* Set the desired width */
-            height: 500px; /* Set the desired height */
+            height: 100%; /* Set the desired height */
         }
 
         .iframe-container iframe {
             position: absolute;
             width: 200%; /* Increase the width for zooming */
             height: 200%; /* Increase the height for zooming */
-            top: -50%; /* Adjust top value to position the iframe */
-            left: -50%; /* Adjust left value to position the iframe */
+            top: -0%; /* Adjust top value to position the iframe */
+            left: 0%; /* Adjust left value to position the iframe */
             transform: scale(1.5); /* Zoom in using scale */
         }
     </style>
