--- a/milton.html
+++ b/milton.html
@@ -1,1 +1,12 @@
-Milton.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Video</title>
+</head>
+<body>
+    <h1>Embedded Video from NBC News</h1>
+    <iframe loading='lazy' width='560' height='315' src='https://www.nbcnews.com/news/embedded-video/mmvo221026373677' scrolling='no' frameborder='0' allowfullscreen></iframe>
+</body>
+</html>
