--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Background Image Container -->
-    <div style="position: relative; width: 420px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/4D01ECFD-AE97-F466-6633-E90F9C6C4B7C.gif') no-repeat center center; background-size: cover;">
+    <div style="position: relative; width: 420px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/C9D4EA09-2521-F7B4-D96A-EEAB1D79C828.png') no-repeat center center; background-size: cover;">
         <!-- Main Tab positioned individually -->
         <div style="position: absolute; top: 10px; left: 13px;">
             <a href="index.html">
