--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <!-- You can include additional CSS styles or links here -->
+    <style>
+        /* General hover effect to grow images */
+        a img:hover {
+            transform: scale(1.1); /* Makes the images 10% bigger when hovered over */
+            transition: transform 0.3s ease-in-out; /* Smooth transition effect */
+        }
+    </style>
 </head>
 <body>
     <!-- Background Image Container -->
@@ -39,12 +46,12 @@
         </a>
 
         <!-- WATER LOG -->
-        <a href="https://1drv.ms/x/c/e943a2e40708e21e/ER7iCAfkokMggOlsAQAAAAABwszWNviea8MiYutXgL92nA?e=unFhza" target="_blank" rel="noopener">
+        <a href="" target="_blank" rel="noopener">
             <img style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
         </a>
 
         <!-- BGL MONDAYS -->
-        <a href="https://1drv.ms/x/c/e943a2e40708e21e/EeBxn2sJhqBLs0RwwSIr18kBwAJzbrbvC6t12iggcI2tdg?e=MZ2v5Q" target="_blank" rel="noopener">
+        <a href="" target="_blank" rel="noopener">
             <img style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
         </a>
 
@@ -157,7 +164,6 @@
     <script>
         const videos = [
             'https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1',
-            // Replace 'video2' and 'video3' with actual video links
             'https://www.youtube.com/embed/uzWJngpIbRY?cc_load_policy=1',
             'https://www.youtube.com/embed/dC8dC8-ZAoU?cc_load_policy=1'
         ];
