--- a/index.html
+++ b/index.html
@@ -6,107 +6,112 @@
     <title>Bulletin Board</title>
     <!-- You can include additional CSS styles or links here -->
     <style>
-        /* General hover effect to grow images, excluding the background, Chief, and Main tab images */
-        a img:not(.no-hover):hover {
-            transform: scale(1.1); /* Makes the images 10% bigger when hovered over */
+        /* Apply hover effect only to relevant images */
+        .hover-effect {
             transition: transform 0.3s ease-in-out; /* Smooth transition effect */
+        }
+        .hover-effect:hover {
+            transform: scale(1.1); /* Makes the images 10% bigger when hovered over */
         }
     </style>
 </head>
 <body>
-    <!-- Background Image Container without hover effect -->
-    <div class="no-hover" style="position: relative; width: 420px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/STATIC_IMAGE_URL.png') no-repeat center center; background-size: cover;">
-        <!-- Main Tab positioned individually without hover effect -->
+    <!-- Background Image Container -->
+    <div style="position: relative; width: 420px; height: 1600px; background: url('https://s3.amazonaws.com/tsresources.targetsolutions.com/4D01ECFD-AE97-F466-6633-E90F9C6C4B7C.gif') no-repeat center center; background-size: cover;">
+        
+        <!-- Main Tab positioned individually (No hover effect) -->
         <div style="position: absolute; top: 10px; left: 13px;">
             <a href="index.html">
-                <img class="no-hover" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/68B39CC3-1F0B-B7D2-2CEF-5E594C07A390.png" alt="Main Page" style="width: 105px; height: 35px;">
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/68B39CC3-1F0B-B7D2-2CEF-5E594C07A390.png" alt="Main Page" style="width: 105px; height: 35px;">
             </a>
         </div>
 
-        <!-- Chief Tab positioned individually without hover effect -->
+        <!-- Chief Tab positioned individually (No hover effect) -->
         <div style="position: absolute; top: 10px; left: 120px;">
             <a href="chief.html">
-                <img class="no-hover" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C8B723D-FE26-81DA-67A1-2B69283F22B5.png" alt="Chief Page" style="width: 190px; height: 35px;">
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C8B723D-FE26-81DA-67A1-2B69283F22B5.png" alt="Chief Page" style="width: 190px; height: 35px;">
             </a>
         </div>
+
+        <!-- Links with Hover Effect -->
 
         <!-- PHYSICAL FITNESS with Tooltip -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47938" target="_top">
-            <img style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
+            <img class="hover-effect" style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
         </a>
 
         <!-- PRE-TRIP INSPECTION -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,10&courseid=614618" target="_top">
-            <img style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
+            <img class="hover-effect" style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
         </a>
 
         <!-- AREA FAMILIARIZATION -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47936" target="_top">
-            <img style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
+            <img class="hover-effect" style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
         </a>
 
         <!-- WATER LOG -->
         <a href="" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
+            <img class="hover-effect" style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
         </a>
 
         <!-- BGL MONDAYS -->
         <a href="" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
+            <img class="hover-effect" style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
         </a>
 
         <!-- COMPANY TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948089" target="_top">
-            <img style="position: absolute; top: 420px; left: 190px; width: 96px; height: 24px;" title="Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/F708BC7C-4822-20CC-AC34-1934BBBE9832.png" alt="Company Training">
+            <img class="hover-effect" style="position: absolute; top: 420px; left: 190px; width: 96px; height: 24px;" title="Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/F708BC7C-4822-20CC-AC34-1934BBBE9832.png" alt="Company Training">
         </a>
 
         <!-- DRIVER TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948090" target="_top">
-            <img style="position: absolute; top: 450px; left: 190px; width: 82px; height: 24px;" title="Driver Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AEA20159-72A8-173D-FF20-D9FB9B472905.png" alt="Driver Training">
+            <img class="hover-effect" style="position: absolute; top: 450px; left: 190px; width: 82px; height: 24px;" title="Driver Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AEA20159-72A8-173D-FF20-D9FB9B472905.png" alt="Driver Training">
         </a>
 
         <!-- HAZMAT -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948092" target="_top">
-            <img style="position: absolute; top: 480px; left: 190px; width: 91px; height: 24px;" title="Hazmat" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AF2EC452-67F2-6465-8D82-C899FF79C219.png" alt="Hazmat">
+            <img class="hover-effect" style="position: absolute; top: 480px; left: 190px; width: 91px; height: 24px;" title="Hazmat" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AF2EC452-67F2-6465-8D82-C899FF79C219.png" alt="Hazmat">
         </a>
 
         <!-- OFFICER TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948093" target="_top">
-            <img style="position: absolute; top: 510px; left: 190px; width: 95px; height: 24px;" title="Officer Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E124536-7ADD-03D8-3985-9249D3CB60E6.png" alt="Officer Training">
+            <img class="hover-effect" style="position: absolute; top: 510px; left: 190px; width: 95px; height: 24px;" title="Officer Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E124536-7ADD-03D8-3985-9249D3CB60E6.png" alt="Officer Training">
         </a>
 
         <!-- NON-ISO -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=2484801" target="_top">
-            <img style="position: absolute; top: 540px; left: 150px; width: 177px; height: 24px;" title="Non-ISO" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/7401D0DF-9921-2EED-27F6-BA85F825D6A5.png" alt="Non-ISO">
+            <img class="hover-effect" style="position: absolute; top: 540px; left: 150px; width: 177px; height: 24px;" title="Non-ISO" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/7401D0DF-9921-2EED-27F6-BA85F825D6A5.png" alt="Non-ISO">
         </a>
 
         <!-- MULTI-AGENCY COMPANY TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=2504349" target="_top">
-            <img style="position: absolute; top: 570px; left: 125px; width: 255px; height: 24px;" title="Multi-Agency Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E6A964F-7C95-A9A4-3A64-84488264B3E0.png" alt="Multi-Agency Company Training">
+            <img class="hover-effect" style="position: absolute; top: 570px; left: 125px; width: 255px; height: 24px;" title="Multi-Agency Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E6A964F-7C95-A9A4-3A64-84488264B3E0.png" alt="Multi-Agency Company Training">
         </a>
 
         <!-- FLEET MAINTENANCE REQUEST -->
         <a href="https://palmcoastfl.fasterwebcloud.com/FASTER/Portal/login/default.aspx" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 695px; left: 36px; width: 296px; height: 24px;" title="Fleet Maintenance Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/372A95C8-5C05-CD67-97A6-BC75E3DE7932.png" alt="Fleet Maintenance Request">
+            <img class="hover-effect" style="position: absolute; top: 695px; left: 36px; width: 296px; height: 24px;" title="Fleet Maintenance Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/372A95C8-5C05-CD67-97A6-BC75E3DE7932.png" alt="Fleet Maintenance Request">
         </a>
 
         <!-- SCBA HARNESS REPAIR REQUEST -->
         <a href="http://centrality/Fire/scbaharnesses" target="_top">
-            <img style="position: absolute; top: 725px; left: 36px; width: 309px; height: 24px;" title="SCBA Harness Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/66D730C0-81D3-22A2-6921-A65A78DBD355.png" alt="SCBA Harness Repair Request">
+            <img class="hover-effect" style="position: absolute; top: 725px; left: 36px; width: 309px; height: 24px;" title="SCBA Harness Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/66D730C0-81D3-22A2-6921-A65A78DBD355.png" alt="SCBA Harness Repair Request">
         </a>
 
         <!-- CENTRALITY -->
         <a href="http://centrality.ci.palm-coast.fl.us/" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 755px; left: 36px; width: 133px; height: 24px;" title="Centrality" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E835CDDE-79A6-4686-A016-E0CAE74ECD9E.png" alt="Centrality">
+            <img class="hover-effect" style="position: absolute; top: 755px; left: 36px; width: 133px; height: 24px;" title="Centrality" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E835CDDE-79A6-4686-A016-E0CAE74ECD9E.png" alt="Centrality">
         </a>
 
         <!-- SMALL EQUIPMENT REPAIR REQUEST -->
         <a href="http://centrality/Forms/Fire/PrevMaintenance" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 785px; left: 36px; width: 360px; height: 24px;" title="Small Equipment Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A2A1E29F-658D-5653-52DD-D045EF12B504.png" alt="Small Equipment Repair Request">
+            <img class="hover-effect" style="position: absolute; top: 785px; left: 36px; width: 360px; height: 24px;" title="Small Equipment Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A2A1E29F-658D-5653-52DD-D045EF12B504.png" alt="Small Equipment Repair Request">
         </a>
 
         <!-- YOUTUBE LINK -->
-        <div class="video-carousel" style="position: absolute; top: 920px; left: 15px;">
+        <div class="video-carousel" style="position: absolute; top: 920px; left: 12px;">
             <!-- Controls with custom arrows and centered text -->
             <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
                 <!-- Custom left arrow image -->
@@ -131,32 +136,32 @@
 
         <!-- PEER SUPPORT -->
         <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 1210px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support">
+            <img class="hover-effect" style="position: absolute; top: 1210px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support">
         </a>
 
         <!-- CRITICAL INCIDENT EXPOSURE -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,7&credentialID=271617&courseID=1255585&oTID=578792" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 1240px; left: 36px; width: 311px; height: 24px;" title="Critical Incident Exposure" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/45434530-0AEC-50EF-CD8B-7ECF7FA9E3D9.png" alt="Critical Incident Exposure">
+            <img class="hover-effect" style="position: absolute; top: 1240px; left: 36px; width: 311px; height: 24px;" title="Critical Incident Exposure" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/45434530-0AEC-50EF-CD8B-7ECF7FA9E3D9.png" alt="Critical Incident Exposure">
         </a>
 
         <!-- FCDICE -->
         <a href="https://floridastatefirecollege.org/public/pb_index.asp" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
+            <img class="hover-effect" style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
         </a>
 
         <!-- UNIFORM STORE -->
         <a href="https://designlabonline.net/pcf/" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
+            <img class="hover-effect" style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
         </a>
 
         <!-- MD Anderson -->
         <a href="https://garnold91.wixsite.com/dash/cancer" target="_top">
-            <img style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.png" alt="MD Anderson">
+            <img class="hover-effect" style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.gif" alt="MD Anderson">
         </a>
 
         <!-- SOP Standard Operating Guidelines -->
         <a href="https://centrality.ci.palm-coast.fl.us/employeedashboard/home/fire" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+            <img class="hover-effect" style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
         </a>
     </div>
 
