--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             transition: box-shadow 0.4s ease-in-out, transform 0.4s ease-in-out;
         }
         .hover-effect-soft-fade:hover {
-            box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.6); /* Soft glow effect with a faded border */
+            box-shadow: 0 0 15px 15px rgba(255, 255, 255, 0.3); /* Reduced glow with softer edges */
             transform: scale(1.05); /* Slightly enlarge the image */
         }
     </style>
@@ -57,4 +57,8 @@
 
         <!-- BGL MONDAYS - Soft Fading Glow Effect -->
         <a href="" target="_blank" rel="noopener">
-            <img class="hover-effect-soft-fade" style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/ts
+            <img class="hover-effect-soft-fade" style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
+        </a>
+
+        <!-- COMPANY TRAINING - Soft Fading Glow Effect -->
+        <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignmen
